的代码更新

--- a/view/register.html
+++ b/view/register.html
@@ -24,7 +24,7 @@
                   
                       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
-’                          <li class=""><a href="#">首页</a></li>
+                          <li class=""><a href="#">首页</a></li>
                           <li class=""><a href="#">精选中心</a></li>
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
