--- a/view/admin/worklist.html
+++ b/view/admin/worklist.html
@@ -53,10 +53,10 @@
             <li class="c">
                 <ul>
                     <li>
-                        <a href="#">分类添加</a>
+                        <a href="#">作品添加</a>
                     </li>
                     <li>
-                        <a href="#">分类管理</a>
+                        <a href="#">作品管理</a>
                     </li>
                 </ul>
             </li>
@@ -66,10 +66,10 @@
             <li class="c">
                 <ul>
                     <li>
-                        <a href="##">添加公告</a>
+                        <a href="##">公告添加</a>
                     </li>
                     <li>
-                        <a href="##">管理公告</a>
+                        <a href="##">公告管理</a>
                     </li>
                 </ul>
             </li>
