--- a/view/admin/footer.html
+++ b/view/admin/footer.html
@@ -4,6 +4,7 @@
 </div>
 </div>
 <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+<script src="/bootstrap/js/bootstrap.min.js"></script>
 <script src="/layui/layui.all.js"></script>
 <script>
 //JavaScript代码区域
