--- a/view/admin/header.html
+++ b/view/admin/header.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>视野</title>
+    <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="/layui/css/layui.css">
     <link rel="stylesheet" href="/css/common.css">
 </head>
@@ -56,11 +57,9 @@
                     <li class="layui-nav-item">
                         <a href="javascript:;">作品管理</a>
                         <dl class="layui-nav-child">
+
                             <dd>
-                                <a href="javascript:;">添加作品</a>
-                            </dd>
-                            <dd>
-                                <a href="javascript:;">删除作品</a>
+                                <a href="/admin/post">删除违法作品</a>
                             </dd>
                         </dl>
                     </li>
@@ -68,13 +67,13 @@
                         <a href="javascript:;">公告信息</a>
                         <dl class="layui-nav-child">
                             <dd>
-                                <a href="javascript:;">添加公告</a>
+                                <a href="/admin/inform/addinform">添加公告</a>
                             </dd>
                             <dd>
-                                <a href="javascript:;">修改公告</a>
+                                <a href="/admin/inform">修改公告</a>
                             </dd>
                             <dd>
-                                <a href="javascript:;">删除公告</a>
+                                <a href="/admin/inform">删除公告</a>
                             </dd>
                         </dl>
                     </li>
