--- a/view/index.html
+++ b/view/index.html
@@ -1,1 +1,55 @@
-首页
+<!DOCTYPE html>
+<html lang="en">
+
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<title>Document</title>
+		<link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="/css/index.css" />
+
+	</head>
+
+	<body>
+		<div class="large">
+
+			<div class="nav-bar">
+				<div class="tonter">
+					<div class="collapse navbar-collapse">
+						<ul class="nav navbar-nav navbar-right">
+							<li class="active" role="presentation">
+								<a href="/">首页</a>
+							</li>
+							<li role="presentation">
+								<a href="">精选中心</a>
+							</li>
+							<li role="presentation">
+								<a href="">个人中心</a>
+							</li>
+							<li role="presentation">
+								<a id="" href="">关于我们</a>
+							</li>
+							<li role="presentation">
+								<a id="/" href="register">注册</a>
+							</li>
+							<li role="presentation">
+								<a id="" href="/login">登录</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			
+			<div class="large content">
+				<div>
+				<h1 class="introduce" id="cg">视野</h1>
+				<p id="introduceone" class="introduce">获得灵感并分享您最好的照片</p>
+				<p id="introducetwo" class="introduce">止水映画，镜界，永不止步</p>
+			</div>
+
+		</div>
+	</body>
+	<script src="/jquery/jquery.min.js"></script>
+	<script src="/bootstrap/js/bootstrap.min.js"></script>
+</html>
