--- a/view/login.html
+++ b/view/login.html
@@ -1,49 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    <div>
-        <form class="form-horizontal" id="loginform">
-            <!-- 账号 -->
-            <div class="form-group">
-              <label for="username" class="col-sm-2 control-label">账号</label>
-              <div class="col-sm-10">
-                <input type="text" class="form-control" id="username" name="username" placeholder="请输入账号"><span class="help-block"></span>
-              </div>
-            </div>
 
-            <!-- 密码 -->
-            <div class="form-group">
-              <label for="passwordone" class="col-sm-2 control-label">密码</label>
-              <div class="col-sm-10">
-                <input type="password" class="form-control" id="passwordone" name="passwordone" placeholder="请输入密码"><span class="help-block"></span>
-              </div>
-            </div>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<title>Document</title>
+		<link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="/css/login.css" />
+	</head>
 
-            <!-- 验证码 -->
-            <div class="form-group">
-                <label for="passwd" class="col-sm-2  col-xs-4 control-label">验证码</label>
-                <div class="col-sm-10 col-xs-8">
-                    <input type="text" class="form-control" name="coder" id="coder" placeholder="请输入密码" style="width:80px;display: inline-block;">
-                    <img src="/coderimg" alt="" class="codeimg">
-                    <span class="help-block"></span>
-                </div>
-            </div>
-            
-            <!-- 登录按钮 -->
-            <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10 col-xs-offset-2 col-sm-10">
-                    <button type="button" class="btn btn-default  login">登录</button>
-                </div>
-            </div>
-          </form>
-    </div>
-</body>
-<script src="/jquery/jquery.min.js"></script>
-<script src="/js/user.js"></script>
+	<body>
+		<div>
+
+			<div class="row">
+				<div class="left col-sm-5">
+					<div class="leftone col-sm-12">
+					</div>
+				</div>
+				<div class="contentone col-sm-5">
+					<h1><a href="/">视野</a></h1>
+					<p>访问其他任何地方都找不到的603,065张免费高分辨率照片</p>
+				</div>
+
+				<div class="right col-sm-7 col-sm-offset-5">
+					<div class="rightcontent">
+						<h2>用户登录</h2>
+						<p>没有账号？
+							<a href="/register">注册</a>
+						</p>
+					</div>
+					<div class="rightform">
+						<form id="loginform">
+							<div class="form-group">
+								<label for="username">账号</label>
+								<input type="text" class="form-control" id="username" name="username" placeholder="请输入账号">
+							</div>
+							
+							<div class="form-group">
+								<label for="passwordone">密码</label>
+								<input type="password" class="form-control" id="passwordone" name="passwordone" placeholder="请输入密码">
+							</div>
+							
+							<div class="form-group">
+                                <label for="passwd">验证码</label>
+                                <div>
+                                    <input type="text" class="form-control coder" name="coder" id="coder" placeholder="验证码">
+                                    <img src="/coderimg" alt="" class="codeimg">
+                                    <span class="help-block"></span>
+                                </div>
+                            </div>
+							
+							
+							<button type="button" class="form-control login">立即登录</button>
+						</form>
+						<p>立即登录即表示您同意本<a href="">条款</a>和<a href="">隐私政策</a>。</p>
+					</div>
+				</div>
+			</div>
+
+		</div>
+	</body>
+	<script src="/jquery/jquery.min.js"></script>
+  <script src="/bootstrap/js/bootstrap.min.js"></script>
+  <script src="/js/user.js"></script>
+
 </html>
