--- a/view/register.html
+++ b/view/register.html
@@ -1,104 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/register.css">
-    <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
-</head>
-<body>
-    <div>
-            <nav class="navbar navbar-default">
-                    <div class="container-fluid">
-                        <div class="navbar-header">
-                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                          <span class="icon-bar"></span>
-                          <span class="icon-bar"></span>
-                          <span class="icon-bar"></span>
-                        </button>
-                        <a class="navbar-brand" href="/">Brand</a>
-                      </div>
-                  
-                      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                        <ul class="nav navbar-nav">
-                          <li class=""><a href="#">首页</a></li>
-                          <li class=""><a href="#">精选中心</a></li>
-                        </ul>
-                        <ul class="nav navbar-nav navbar-right">
-                          <li class=""><a href="#">个人中心</a></li>
-                          <li class=""><a href="#">关于我们</a></li>
-                          <li class=""><a href="#">注册</a></li>
-                          <li class=""><a href="#">登录</a></li>
-                        </ul>
-                      </div>
-                    </div>
-                  </nav>
 
-        <div class="surface">
-            <form class="form-horizontal" id="regform">
-                <!-- 账号 -->
-                <div class="form-group">
-                  <label for="username" class="col-sm-2 control-label">账号</label>
-                  <div class="col-sm-10">
-                    <input type="text" class="form-control" id="username" name="username" placeholder="请输入账号"><span class="help-block"></span>
-                  </div>
-                </div>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<title>Document</title>
+		<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="/css/register.css" />
+	</head>
 
-                <!-- 密码 -->
-                <div class="form-group">
-                  <label for="passwordone" class="col-sm-2 control-label">密码</label>
-                  <div class="col-sm-10">
-                    <input type="password" class="form-control" id="passwordone" name="passwordone" placeholder="请输入密码"><span class="help-block"></span>
-                  </div>
-                </div>
+	<body>
+		<div>
 
-                <!-- 密码 -->
-                <div class="form-group">
-                        <label for="passwordtwo" class="col-sm-2 control-label">确认密码</label>
-                        <div class="col-sm-10">
-                          <input type="password" class="form-control" id="passwordtwo" name="passwordtwo" placeholder="请重复输入密码"><span class="help-block"></span>
-                        </div>
-                </div>
+			<div class="row">
+				<div class="left col-sm-5">
+					<div class="leftone col-sm-12">
+					</div>
+				</div>
+				<div class="contentone col-sm-5">
+					<h1><a href="/">视野</a></h1>
+					<p>访问其他任何地方都找不到的603,065张免费高分辨率照片</p>
+				</div>
 
-                 <!-- 邮箱 -->
-                 <div class="form-group">
-                        <label for="email" class="col-sm-2 control-label">邮箱</label>
-                        <div class="col-sm-10">
-                          <input type="email" class="form-control" id="email" name="email" placeholder="请输入邮箱"><span class="help-block"></span>
-                        </div>
-                </div>
+				<div class="right col-sm-7 col-sm-offset-5">
+					<div class="rightcontent">
+						<h2>用户注册</h2>
+						<p>已有账号？
+							<a href="/login">登录</a>
+						</p>
+					</div>
+					<div class="rightform">
+						<form id="regform">
+							<div class="form-group">
+								<label for="username">账号</label>
+								<input type="text" class="form-control" id="username" name="username" placeholder="请输入账号">
+							</div>
+							
+							<div class="form-group">
+								<label for="passwordone">密码</label>
+								<input type="password" class="form-control" id="passwordone" name="passwordone" placeholder="请输入密码">
+							</div>
+							
+							<div class="form-group">
+								<label for="passwordtwo">确认密码</label>
+								<input type="password" class="form-control" id="passwordtwo" name="passwordtwo" placeholder="请重复输入密码">
+							</div>
+							
+							<div class="form-group">
+								<label for="email">邮箱</label>
+								<input type="email" class="form-control" id="email" name="email" placeholder="请输入邮箱">
+							</div>
+							
+							<div class="form-group">
+								<label for="tel">手机号</label>
+								<input type="tel" class="form-control" id="tel" name="tel" placeholder="请输入手机号">
+							</div>
+							
+							
+							<button type="button" class="form-control regbtn">立即注册</button>
+						</form>
+						<p>立即注册即表示您同意本<a href="">条款</a>和<a href="">隐私政策</a>。</p>
+					</div>
+				</div>
+			</div>
 
-                 <!-- 手机号 -->
-                 <div class="form-group">
-                        <label for="tel" class="col-sm-2 control-label">手机号</label>
-                        <div class="col-sm-10">
-                          <input type="tel" class="form-control" id="tel" name="tel" placeholder="请输入手机号"><span class="help-block"></span>
-                        </div>
-                </div>
+		</div>
+	</body>
+	<script src="/jquery/jquery.min.js"></script>
+  <script src="/bootstrap/js/bootstrap.min.js"></script>
+  <script src="/js/user.js"></script>
 
-                <div class="form-group">
-                  <div class="col-sm-offset-2 col-sm-10">
-                    <div class="checkbox">
-                      <label>
-                        <input type="checkbox">已阅读<a href="###">《注册协议》</a>
-                      </label>
-                    </div>
-                  </div>
-                </div>
-                
-                <div class="form-group">
-                  <div class="col-sm-offset-2 col-sm-10">
-                    <button type="button" class="btn btn-default regbtn">立即注册</button>
-                  </div>
-                </div>
-              </form>
-            </div>
-    </div>
-</body>
-<script src="/jquery/jquery.min.js"></script>
-<script src="/bootstrap/js/bootstrap.min.js"></script>
-<script src="/js/user.js"></script>
 </html>
