--- a/view/css/index.css
+++ b/view/css/index.css
@@ -26,7 +26,7 @@ margin: 0 auto;
 
 .nav>li>a{
 	color: #777777;
-	font-size: 16px;
+	font-size: 1rem;
 }
 
 .nav-bar{
@@ -40,7 +40,7 @@ margin: 0 auto;
 }
 
 h1{
-	font-size: 60px;
+	font-size: 3.75rem;
 	font-weight: 700;
 }
 
@@ -49,11 +49,11 @@ h1{
 }
 
 #introduceone{
-	font-size: 30px;
+	font-size: 1.875rem;
 }
 
 #introducetwo{
-	font-size: 20px;	
+	font-size: 1.25rem;	
 }
 
 .introduce{
