--- a/view/css/login.css
+++ b/view/css/login.css
@@ -46,12 +46,12 @@ P{
 
 .contentone h1{
 	font-weight: 700;
-	font-size: 48px;
+	font-size: 3rem;
 }
 
 .contentone p{
 	font-weight: 700;
-	font-size: 24px;
+	font-size: 1.5rem;
 	margin-top: 50px;
 }
 
@@ -62,13 +62,13 @@ P{
 
 .rightcontent h2{
 	font-family: "微软雅黑";
-	font-size: 46px;
+	font-size: 2.875rem;
 	font-weight: 700;
 }
 
 .rightcontent p{
 	margin-top: 25px;
-	font-size: 15px;
+	font-size: 0.9375rem;
 }
 
 .rightform{
@@ -85,7 +85,7 @@ P{
 
 .form-group label{
 	font-family: "微软雅黑";
-	font-size: 15px;
+	font-size: 0.9375rem;
     font-weight: 400;
     line-height: 1.6;
     color: #111111;
@@ -97,7 +97,7 @@ P{
     width: 100%;
     height: 40px;
     padding: 6px 12px;
-    font-size: 15px;
+    font-size: 0.9375rem;
     line-height: 1.6;
     color: #111111;
     background-color: transparent;
