--- a/view/admin/header.html
+++ b/view/admin/header.html
@@ -26,7 +26,7 @@
                     </a>
                     <dl class="layui-nav-child">
                         <dd>
-                            <a href="#">修改密码</a>
+                            <a href="/admin/login/updatepw">修改密码</a>
                         </dd>
                         <dd>
                             <a href="/admin/login/logout">退出登录</a>
