--- a/view/index.html
+++ b/view/index.html
@@ -22,7 +22,7 @@
 								<a href="/">首页</a>
 							</li>
 							<li role="presentation">
-								<a href="">精选中心</a>
+								<a href="/postcenter">精选中心</a>
 							</li>
 							<li role="presentation">
 								<a href="">个人中心</a>
