--- a/view/index.html
+++ b/view/index.html
@@ -1,54 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
 
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<title>Document</title>
-		<link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="/css/index.css" />
-	</head>
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>Document</title>
+	<link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="/css/index.css" />
+</head>
 
-	<body>
-		<div class="large">
+<body>
 
-			<nav class="nav-bar">
-				<div class="tonter">
-					<div class="collapse navbar-collapse">
-						<ul class="nav navbar-nav navbar-right">
-							<li class="active" role="presentation">
-								<a href="/">首页</a>
-							</li>
-							<li role="presentation">
-								<a href="/postcenter">精选中心</a>
-							</li>
-							<li role="presentation">
-								<a href="/user">个人中心</a>
-							</li>
-							<li role="presentation">
-								<a id="" href="">关于我们</a>
-							</li>
-							<li role="presentation">
-								<a id="/" href="register">注册</a>
-							</li>
-							<li role="presentation">
-								<a id="" href="/login">登录</a>
-							</li>
-						</ul>
-					</div>
+	<div class="large_1 div">
+		<!-- 导航 -->
+		<nav class="nav-bar">
+			<div class="tonter">
+				<div class="collapse navbar-collapse">
+					<ul class="nav navbar-nav navbar-right">
+						<li class="active" role="presentation">
+							<a href="/">首页</a>
+						</li>
+						<li role="presentation">
+							<a href="/postcenter">精选中心</a>
+						</li>
+						<li role="presentation">
+							<a href="/user">个人中心</a>
+						</li>
+						<li role="presentation">
+							<a id="" href="">关于我们</a>
+						</li>
+						<li role="presentation">
+							<a id="/" href="register">注册</a>
+						</li>
+						<li role="presentation">
+							<a id="" href="/login">登录</a>
+						</li>
+					</ul>
 				</div>
-			</nav>
-			
-			<div class="large content">
-				<div>
-				<h1 class="introduce" id="cg">视野</h1>
-				<p id="introduceone" class="introduce">获得灵感并分享您最好的照片</p>
+			</div>
+		</nav>
+		<!-- 背景文字 -->
+		<div class="large content">
+			<div>
+				<h1 class="introduce" id="cg">FIELD OF VISION</h1>
+				<p id="introduceone" class="introduce">Get inspired and share your best photos</p>
 				<p id="introducetwo" class="introduce">止水映画，镜界，永不止步</p>
 			</div>
 
 		</div>
-	</body>
-	<script src="/jquery/jquery.min.js"></script>
-	<script src="/bootstrap/js/bootstrap.min.js"></script>
+	</div>
+
+	<div class="large_2 div"></div>
+	<div class="large_3 div"></div>
+	<div class="large_4 div"></div>
+
+	<ul id="fixed">
+		<li>捕</li>
+		<li>光</li>
+		<li>逐</li>
+		<li>影</li>
+	</ul>
+
+</body>
+<script src="/jquery/jquery.min.js"></script>
+<script src="/bootstrap/js/bootstrap.min.js"></script>
+<script>
+	   $("#fixed>li").click(function(){
+            var n=$(this).index();
+            $("html,body").animate({
+                scrollTop:n*$(".div").height()
+            },200)
+        })
+</script>
 </html>
