--- a/view/css/index.css
+++ b/view/css/index.css
@@ -22,21 +22,36 @@
     height: 100%;
 	position: absolute;
 	top: 100%;
-	background-color: aqua;
+	/* background-color: aqua; */
+	/* background-image: url(../image/first03.jpg);
+	background-size: cover; */
+	display: flex;
+	flex-wrap: wrap;
+	/* max-width: 800px; */
+	padding: 2em;
+	margin: auto;
 }
+
 .large_3{
 	width: 100%;
 	height: 100%;
 	position: absolute;
 	top:200%;
-	background-color: bisque;
+	/* background-color: bisque; */
+	text-align: center;
 }
 .large_4{
 	width: 100%;
 	height: 100%;
 	position: absolute;
 	top:300%;
-	background-color:rosybrown;
+	/* background-color:rosybrown; */
+	margin: 0;
+	display: flex;
+	/* background: #240041; */
+	background-image: url(/image/f_03.jpg);
+	background-size: cover;
+	font-family: Montserrat, sans-serif;
 }
 #fixed{
 	position: fixed;
@@ -105,4 +120,205 @@ h1{
 	text-align: center;
 }
 /* 第一个页面内容end */
+/* 第二个页面内容star */
+.splitting-image {
+	background-size: 0% 0%;
+	position: relative;
+	overflow: hidden;
+  }
+  
+  .splitting-image img {
+	display: block;
+  }
+  
+  @supports (--row-size: calc( 100% / 2 )) {
+	.splitting-image {
+	  background-size: cover;
+	  visibility: hidden;
+	  --row-size: calc(100% / var(--row-total));
+	  --col-size: calc(100% / var(--col-total));
+	}
+  
+	.split-cell {
+	  background: inherit;
+	  position: absolute;
+	  overflow: hidden;
+	  top: calc(var(--row-size) * var(--row-index));
+	  left: calc(var(--col-size) * var(--col-index));
+	  width: calc(0.5px + var(--col-size));
+	  height: calc(0.5px + var(--row-size));
+	}
+  
+	.split-cell__inner {
+	  position: absolute;
+	  visibility: visible;
+	  background: inherit;
+	  width: calc(100% * var(--col-total));
+	  height: calc(100% * var(--row-total));
+	  transform: translate(
+		calc(-1 * var(--col-size) * var(--col-index)),
+		calc(-1 * var(--row-size) * var(--row-index))
+	  );
+	}
+  }
+  .tiler {
+	position: relative;
+	display: inline-block;
+	cursor: pointer;
+	visibility: hidden;
+	width: 33.3%;
+	margin: auto;
+  }
+  
+  .tiler img {
+	display: block;
+	margin: auto;
+	max-width: 100%;
+	visibility: visible;
+  }
+  
+  .tiler-overlay {
+	background-position: center center;
+	margin: auto;
+	position: fixed;
+	top: 1em;
+	bottom: 1em;
+	left: 1em;
+	right: 1em;
+	max-width: 1000px;
+	max-height: 600px;
+	-webkit-perspective: 30px;
+			perspective: 30px;
+  }
+  
+  .tiler-overlay .split-cell {
+	pointer-events: none;
+	opacity: 0;
+	-webkit-transform: translateZ(-15px);
+			transform: translateZ(-15px);
+	-webkit-transform-style: preserve-3d;
+			transform-style: preserve-3d;
+	transition-property: opacity, -webkit-transform;
+	transition-property: transform, opacity;
+	transition-property: transform, opacity, -webkit-transform;
+	transition-duration: 0.5s, 0.4s;
+	transition-timing-function: cubic-bezier(0.65, 0.01, 0.15, 1.33);
+	/* The center character index */
+	--center-x: calc((var(--col-total) - 1) / 2);
+	--center-y: calc((var(--row-total) - 1) / 2);
+	/* Offset from center, positive & negative */
+	--offset-x: calc(var(--col-index) - var(--center-x));
+	--offset-y: calc(var(--row-index) - var(--center-y));
+	/* Absolute distance from center, only positive */
+	--distance-x: calc(
+	  (var(--offset-x) * var(--offset-x)) / var(--center-x)
+	);
+	/* Absolute distance from center, only positive */
+	--distance-y: calc(
+	  (var(--offset-y) * var(--offset-y)) / var(--center-y)
+	);
+	transition-delay: calc( 0.1s * var(--distance-y) + 0.1s * var(--distance-x) );
+  }
+  
+  .tiler-overlay {
+	z-index: 2;
+  }
+  
+  .tiler:hover .split-cell {
+	-webkit-transform: scale(1);
+			transform: scale(1);
+	opacity: 1;
+  }
+  
+  
+  
+/* 第二个页面内容end */
+/* 第三个页面内容star */
+#mydiv {
+	position: relative;
+	text-align: center;
+}
 
+.imglist {
+	width: 90%;
+	height: 700px;
+	overflow: hidden;
+	margin-left: 10%;
+}
+
+.imglist li {
+	width: 90%;
+	height: 700px;
+	overflow: hidden;
+
+}
+
+/* .large_3 ul li {
+	list-style: none;
+} */
+
+.btn {
+	position: absolute;
+	margin-left: -5%;
+	bottom: 10px;
+	/* margin: 0 auto; */
+	text-align: center;
+	/* width: 100%; */
+}
+
+.btn li {
+	width: 20px;
+	height: 20px;
+	border-radius: 50%;
+	background-color: rgb(156, 82, 82);
+	display: inline-block;
+	cursor: pointer;
+	
+}
+/* 第三个页面内容end */
+/* 第四个页面内容star */
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,400i,700");
+.large_4 h1 {
+  margin: auto;
+  font-size: 20vw;
+  text-align: center;
+  text-transform: uppercase;
+  color: #900048;
+  white-space: nowrap;
+  letter-spacing: -.15em;
+}
+
+.large_4 span:nth-child(1) {
+  animation: blink 1s steps(1, start) 0.33s infinite;
+}
+
+.large_4 span:nth-child(2) {
+  animation: blink 1s steps(1, start) 0.66s infinite;
+}
+
+.large_4 span:nth-child(3) {
+  animation: blink 1s steps(1, start) 0.33s infinite;
+}
+
+.large_4 span:nth-child(4) {
+  animation: blink 1s steps(1, start) 0.66s infinite;
+}
+
+.large_4 span:nth-child(5) {
+  animation: blink 1s steps(1, start) 0.33s infinite;
+}
+
+.large_4 span:nth-child(6) {
+  animation: blink 1s steps(1, start) 0.66s infinite;
+}
+
+@keyframes blink {
+  33% {
+    color: rgb(63, 165, 120);
+  }
+  66% {
+    color: rgb(172, 148, 186);
+  }
+}
+
+/* 第四个页面内容end */
