--- a/view/index.html
+++ b/view/index.html
@@ -28,10 +28,10 @@
 							<a href="/user">个人中心</a>
 						</li>
 						<li role="presentation">
-							<a id="" href="">关于我们</a>
+							<a href="/aboutus">关于我们</a>
 						</li>
 						<li role="presentation">
-							<a id="/" href="register">注册</a>
+							<a id="/" href="/register">注册</a>
 						</li>
 						<li role="presentation">
 							<a id="" href="/login">登录</a>
