--- a/view/css/personal.css
+++ b/view/css/personal.css
@@ -1,81 +1,81 @@
-.tonter{
-    width: 1140px;	
+.tonter {
+    width: 1140px;
     margin: 0 auto;
-    }
-    
-    .nav>li>a:focus, .nav>li>a:hover {
-        text-decoration: none;
-        background-color: transparent;
-        color: #333333;
-    }
-    
-    .nav>li>a{
-        color: #777777;
-        font-size: 16px;
-    }
-    
-    .nav-bar{
-        width: 100%;
-        background-color: rgb(252,252,252);
-    }
+}
 
-    .information{
-        height: 300px;
-        width: 1300px;
-        margin:0 auto;
-        margin-top: 10px;
-        /* background-color: aqua; */
-    }
+.nav>li>a:focus,
+.nav>li>a:hover {
+    text-decoration: none;
+    background-color: transparent;
+    color: #333333;
+}
 
-    .layui-tab{
-        width: 1300px;
-        margin: 0 auto;
-        margin-top: 10px;
-    }
+.nav>li>a {
+    color: #777777;
+    font-size: 16px;
+}
 
-    .layui-tab-title{
-        text-align: center;
-    }
+.nav-bar {
+    width: 100%;
+    background-color: rgb(252, 252, 252);
+}
 
-    .layui-tab-title li{
-        width: 325px;
-    }
+.information {
+    height: 300px;
+    width: 1300px;
+    margin: 0 auto;
+    margin-top: 10px;
+    /* background-color: aqua; */
+}
 
+.layui-tab {
+    width: 1300px;
+    margin: 0 auto;
+    margin-top: 10px;
+}
 
-    .conterone{
-        height: 400px;
-        /* background-color: chocolate; */
-        padding: 20px;
-        margin-top:5px; 
-    }
+.layui-tab-title {
+    text-align: center;
+}
 
-    .conterimg{
-        height: 200px;
-        padding: 5px;
-        /* background-image: url('../image/index.jpg'); */
-        background-size: cover;
-    }
+.layui-tab-title li {
+    width: 325px;
+}
 
-    .imageone{
-        margin-top: 10px;
-    }
+.conterone {
+    height: 400px;
+    /* background-color: chocolate; */
+    padding: 20px;
+    margin-top: 5px;
+}
 
-    .imageone:first-child{
-        font-size: 20px;
-        font-weight: 700;
-    }
+.conterimg {
+    height: 200px;
+    padding: 5px;
+    /* background-image: url('../image/index.jpg'); */
+    background-size: cover;
+}
 
-    .informationtabel{
-        height: 500px;
-        width: 1000px;
-        margin:  0 auto;
-        /* background-color: aqua; */
-        padding: 0 20px;
-    }
+.imageone {
+    margin-top: 10px;
+}
 
-    .information h1{
-        text-align: center;
-        line-height: 300px;
-        font-size: 60px;
-        font-weight:700
-    }
+.imageone:first-child {
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.informationtabel {
+    height: 500px;
+    width: 1000px;
+    margin: 0 auto;
+    /* background-color: aqua; */
+    padding: 0 20px;
+}
+
+.information h1 {
+    text-align: center;
+    line-height: 300px;
+    font-size: 60px;
+    font-weight: 700
+}
