--- a/view/nopage.html
+++ b/view/nopage.html
@@ -5,19 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/nopage.css">
-    <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="/css/nopage.css" />
 </head>
 <body>
-    <div class="nopage">
-        <p class="top"><i class="fa fa-frown-o" aria-hidden="true"></i>&nbsp;404</p>
-        <p class="medium">不好意思，您访问的页面不存在~</p>
-        <p class="bottom">您可以：
-                <a href="/" class="">去首页 &gt;</a>
-            </p>
-    </div>
+    <div class="rail">
+        <div class="stamp four">4</div>
+        <div class="stamp zero">0</div>
+        <div class="stamp four">4</div>
+        <div class="stamp zero">0</div>
+        <div class="stamp four">4</div>
+        <div class="stamp zero">0</div>
+        <div class="stamp four">4</div>
+        <div class="stamp zero">0</div>
+        <div class="stamp four">4</div>
+        <div class="stamp zero">0</div>
+        <div class="stamp four">4</div>
+        <div class="stamp zero">0</div>
+        <div class="stamp four">4</div>
+        <div class="stamp zero">0</div>
+        <div class="stamp four">4</div>
+        <div class="stamp zero">0</div>
+        <div class="stamp four">4</div>
+        <div class="stamp zero">0</div>
+        <div class="stamp four">4</div>
+        <div class="stamp zero">0</div>
+      </div>
+      <div class="world">
+        <div class="forward">
+          <div class="box">
+            <div class="wall"></div>
+            <div class="wall"></div>
+            <div class="wall"></div>
+            <div class="wall"></div>
+            <div class="wall"></div>
+            <div class="wall"></div>
+          </div>
+        </div>
+      </div>
+      <div class="nopage"><a href="/">返回首页</a></div>
 </body>
-<script src="/jquery/jquery.min.js"></script>
-<script src="/bootstrap/js/bootstrap.min.js"></script>
 </html>
