--- a/view/personal.html
+++ b/view/personal.html
@@ -22,16 +22,16 @@
                         <a href="/">首页</a>
                     </li>
                     <li role="presentation">
-                        <a href="">精选中心</a>
+                        <a href="/postcenter">精选中心</a>
                     </li>
                     <li role="presentation">
-                        <a href="/personal">个人中心</a>
+                        <a href="/user">个人中心</a>
                     </li>
                     <li role="presentation">
                         <a href="">关于我们</a>
                     </li>
                     <li role="presentation">
-                        <a href="register">修改密码</a>
+                        <a href="/register">修改密码</a>
                     </li>
                     <li role="presentation">
                         <a href="/logout">退出登录</a>
