--- a/view/postcenter.html
+++ b/view/postcenter.html
@@ -23,13 +23,13 @@
 						<a href="/postcenter">精选中心</a>
 					</li>
 					<li role="presentation">
-						<a href="">个人中心</a>
+						<a href="/user">个人中心</a>
 					</li>
 					<li role="presentation">
 						<a id="" href="">关于我们</a>
 					</li>
 					<li role="presentation">
-						<a id="/" href="register">注册</a>
+						<a id="/" href="/register">注册</a>
 					</li>
 					<li role="presentation">
 						<a id="" href="/login">登录</a>
