--- a/view/personal.html
+++ b/view/personal.html
@@ -28,7 +28,7 @@
                         <a href="/user">个人中心</a>
                     </li>
                     <li role="presentation">
-                        <a href="">关于我们</a>
+                        <a href="/aboutus">关于我们</a>
                     </li>
                     <li role="presentation">
                         <a href="/register">修改密码</a>
