--- a/view/postcenter.html
+++ b/view/postcenter.html
@@ -26,7 +26,7 @@
 						<a href="/user">个人中心</a>
 					</li>
 					<li role="presentation">
-						<a id="" href="">关于我们</a>
+						<a id="" href="/aboutus">关于我们</a>
 					</li>
 					<li role="presentation">
 						<a id="/" href="/register">注册</a>
