--- a/view/login.html
+++ b/view/login.html
@@ -34,19 +34,19 @@
 						<form id="loginform">
 							<div class="form-group">
 								<label for="username">账号</label>
-								<input type="text" class="form-control" id="username" name="username" placeholder="请输入账号">
+								<input type="text" class="form-control" id="username" name="username" placeholder="请输入账号"><span class="h"></span>
 							</div>
 							
 							<div class="form-group">
 								<label for="passwordone">密码</label>
-								<input type="password" class="form-control" id="passwordone" name="passwordone" placeholder="请输入密码">
+								<input type="password" class="form-control" id="passwordone" name="passwordone" placeholder="请输入密码"><span class="h"></span>
 							</div>
 							
 							<div class="form-group">
                                 <label for="passwd">验证码</label>
                                 <div>
                                     <input type="text" class="form-control coder" name="coder" id="coder" placeholder="验证码">
-                                    <img src="/coderimg" alt="" class="codeimg">
+                                    <img src="/coderimg" id="imgcoder" alt="" class="codeimg"><span class="h"></span>
                                     <span class="help-block"></span>
                                 </div>
                             </div>
