--- a/view/register.html
+++ b/view/register.html
@@ -34,27 +34,27 @@
 						<form id="regform">
 							<div class="form-group">
 								<label for="username">账号</label>
-								<input type="text" class="form-control" id="username" name="username" placeholder="请输入账号">
+								<input type="text" class="form-control" id="username" name="username" placeholder="请输入账号"><span class="h"></span>
 							</div>
 							
 							<div class="form-group">
 								<label for="passwordone">密码</label>
-								<input type="password" class="form-control" id="passwordone" name="passwordone" placeholder="请输入密码">
+								<input type="password" class="form-control" id="passwordone" name="passwordone" placeholder="请输入密码"><span class="h"></span>
 							</div>
 							
 							<div class="form-group">
 								<label for="passwordtwo">确认密码</label>
-								<input type="password" class="form-control" id="passwordtwo" name="passwordtwo" placeholder="请重复输入密码">
+								<input type="password" class="form-control" id="passwordtwo" name="passwordtwo" placeholder="请重复输入密码"><span class="h"></span>
 							</div>
 							
 							<div class="form-group">
 								<label for="email">邮箱</label>
-								<input type="email" class="form-control" id="email" name="email" placeholder="请输入邮箱">
+								<input type="email" class="form-control" id="email" name="email" placeholder="请输入邮箱"><span class="h"></span>
 							</div>
 							
 							<div class="form-group">
 								<label for="tel">手机号</label>
-								<input type="tel" class="form-control" id="tel" name="tel" placeholder="请输入手机号">
+								<input type="tel" class="form-control" id="tel" name="tel" placeholder="请输入手机号"><span class="h"></span>
 							</div>
 							
 							
