--- a/view/aboutus.html
+++ b/view/aboutus.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/aboutus.css">
 </head>
+
 <body>
     <nav class="nav-bar">
         <div class="tonter">
             <div class="collapse navbar-collapse">
+                <ul class="nav navbar-nav navbar-left">
+                    <li class="active" role="presentation">
+                        <a href="/">
+                            <i class="fa fa-camera-retro imglogo" aria-hidden="true"></i>&nbsp;&nbsp;
+                            <span class="imglogo">视野</span>
+                        </a>
+                    </li>
+                </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="active" role="presentation">
                         <a href="/">首页</a>
@@ -23,7 +34,7 @@
                         <a href="/user">个人中心</a>
                     </li>
                     <li role="presentation">
-                        <a id="" href="">关于我们</a>
+                        <a id="" href="/aboutus">关于我们</a>
                     </li>
                     <li role="presentation">
                         <a id="/" href="/register">注册</a>
@@ -37,14 +48,15 @@
     </nav>
     <div class="card-container">
         <div class="card">
-          <h1>视野</h1>
-          <h1>577219755&&799902293</h1>
-          <h3>项目组：skyline</h3>
-          <div class="circle"></div>
-          <div class="circle"></div>
+            <h1>视野</h1>
+            <h1>577219755&&799902293</h1>
+            <h3>项目组：skyline</h3>
+            <div class="circle"></div>
+            <div class="circle"></div>
         </div>
-      </div>
+    </div>
 </body>
 <script src="/jquery/jquery.min.js"></script>
 <script src="/bootstrap/js/bootstrap.min.js"></script>
+
 </html>
