--- a/view/addpersonwork.html
+++ b/view/addpersonwork.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>个人作品上传</title>
     <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="/layui/css/layui.css">
     <link rel="stylesheet" href="/css/addpersonwork.css">
 </head>
@@ -16,18 +17,26 @@
     <div class="nav-bar">
         <div class="tonter">
             <div class="collapse navbar-collapse">
+                <ul class="nav navbar-nav navbar-left">
+                    <li class="active" role="presentation">
+                        <a href="/">
+                            <i class="fa fa-camera-retro imglogo" aria-hidden="true"></i>&nbsp;&nbsp;
+                            <span class="imglogo">视野</span>
+                        </a>
+                    </li>
+                </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="active" role="presentation">
                         <a href="/">首页</a>
                     </li>
                     <li role="presentation">
-                        <a href="">精选中心</a>
+                        <a href="/postcenter">精选中心</a>
                     </li>
                     <li role="presentation">
-                        <a href="">个人中心</a>
+                        <a href="/user">个人中心</a>
                     </li>
                     <li role="presentation">
-                        <a id="" href="">关于我们</a>
+                        <a id="" href="/aboutus">关于我们</a>
                     </li>
                     <li role="presentation">
                         <a id="/" href="register">注册</a>
@@ -85,11 +94,11 @@
                 <div class="layui-input-block">
                     <input type="button" id="uploadpic" value="上传图片">
                     <!-- 点击上面的input触发下面的input，且可以上传多张图片 -->
-                    <input type="file" multiple name="images" id="images" class="hide" accept="image/jpeg,image/jpg,image/gif,image/svg" >
+                    <input type="file" multiple name="images" id="images" class="hide" accept="image/jpeg,image/jpg,image/gif,image/svg">
                     <!-- 存放图片的输入框,保存图片的地址 -->
-                    <input type="hidden" name="imglist"  id="imglist" value="">
+                    <input type="hidden" name="imglist" id="imglist" value="">
                     <!-- 放置图片的div -->
-                    <div class="imglist" ></div>
+                    <div class="imglist"></div>
                 </div>
             </div>
 
