--- a/view/css/postcenter.css
+++ b/view/css/postcenter.css
@@ -2,6 +2,10 @@
     box-sizing: border-box;
   }
   
+  .imglogo{
+    font-size: 20px;
+  }
+
   html {
     font-size: 18px;
     line-height: 1.5;
