--- a/view/personal.html
+++ b/view/personal.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>personal</title>
     <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="/layui/css/layui.css">
     <link rel="stylesheet" href="/css/personal.css">
 
@@ -17,6 +18,14 @@
     <div class="nav-bar">
         <div class="tonter">
             <div class="collapse navbar-collapse">
+                <ul class="nav navbar-nav navbar-left">
+                    <li class="active" role="presentation">
+                        <a href="/">
+                            <i class="fa fa-camera-retro imglogo" aria-hidden="true"></i>&nbsp;&nbsp;
+                            <span class="imglogo">视野</span>
+                        </a>
+                    </li>
+                </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="active" role="presentation">
                         <a href="/">首页</a>
