--- a/view/postcenter.html
+++ b/view/postcenter.html
@@ -7,6 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>精选中心</title>
 	<link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="/css/postcenter.css" />
 </head>
 
@@ -15,6 +16,14 @@
 	<div class="nav-bar">
 		<div class="tonter">
 			<div class="collapse navbar-collapse">
+				<ul class="nav navbar-nav navbar-left">
+					<li class="active" role="presentation">
+						<a href="/">
+							<i class="fa fa-camera-retro imglogo" aria-hidden="true"></i>&nbsp;&nbsp;
+							<span class="imglogo">视野</span>
+						</a>
+					</li>
+				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li class="active" role="presentation">
 						<a href="/">首页</a>
@@ -60,22 +69,34 @@
 		%>
 			<a class="card" href="#!">
 				<div class="front" style="background-image: url(<%-imglist[0].replace(/\\/g, '/')%>);">
-					<p><%=p.ptitle%></p>
+					<p>
+						<%=p.ptitle%>
+					</p>
 				</div>
 				<div class="back">
 					<div>
-						<p>作者：<%=p.username%></p>
-						<p><%=p.description%></p>
-						<p>下载：<%=p.uploadnums%></p>
-						<p>点赞：<%=p.zannums%></p>
-						<p>创建时间：<%=p.addtime.toLocaleString()%></p>
+						<p>作者：
+							<%=p.username%>
+						</p>
+						<p>
+							<%=p.description%>
+						</p>
+						<p>下载：
+							<%=p.uploadnums%>
+						</p>
+						<p>点赞：
+							<%=p.zannums%>
+						</p>
+						<p>创建时间：
+							<%=p.addtime.toLocaleString()%>
+						</p>
 						<button class="button">进入</button>
 					</div>
 				</div>
 			</a>
-			<%}%>	
+			<%}%>
 
-			<!-- <a class="card" href="#!">
+				<!-- <a class="card" href="#!">
 				<div class="front" style="background-image: url(./image/pwork05.jpg);">
 					<p>标题：</p>
 				</div>
@@ -90,12 +111,9 @@
 				</div>
 			</a> -->
 	</div>
-	
+
 </body>
 <script src="/jquery/jquery.min.js"></script>
 <script src="/bootstrap/js/bootstrap.min.js"></script>
 
 </html>
-
-
-
